Added setting for PermGen space in start script